--- a/trunk/simulations-html/simulations/faraday-html/templates/optionsPanel.html
+++ b/trunk/simulations-html/simulations/faraday-html/templates/optionsPanel.html
@@ -18,7 +18,7 @@
 
     <br> <!-- vertical space -->
 
-    <div class="controlPanelContents">
+    <div class="optionsPanelContents">
 
         <!-- Magnet Strength slider -->
         <label for="strengthSlider" id="strengthSliderLabel"><%= magnetStrength %></label>
