--- a/trunk/simulations-html/simulations/faraday-html/templates/optionsPanel.html
+++ b/trunk/simulations-html/simulations/faraday-html/templates/optionsPanel.html
@@ -9,8 +9,8 @@
     <div class="ui-bar ui-bar-b">
         <a id="optionsCloseButton" data-role="button" data-icon="delete" data-iconpos="notext" data-theme="b" data-rel="back" data-mini="true" class="alignleft">X</a>
 
-        <!--To work with JQuery Mobile title bar, there must be a title. However, we need to do our own styling on it, so leave this one empty.-->
-        <h1 id="optionsLabel" ></h1>
+        <!--To work with jQuery Mobile title bar, there must be a title. However, we need to do our own styling on it, so leave this one empty.-->
+        <h1></h1>
 
         <!--Add our own title and center in the title bar-->
         <div class="controlPanelTitle"><%= options %></div>
