specify options panel title by id instead of class in css

--- a/simulations-html/simulations/faraday-html/css/faraday.css
+++ b/simulations-html/simulations/faraday-html/css/faraday.css
@@ -48,7 +48,7 @@ div.ui-slider {
     float: left;
 }
 
-.controlPanelTitle {
+#optionsPanelTitle {
     float: right;
     margin-top: 10px;
     margin-right:70px;
