--- a/trunk/simulations-html/simulations/faraday-html/templates/optionsPanel.html
+++ b/trunk/simulations-html/simulations/faraday-html/templates/optionsPanel.html
@@ -13,7 +13,7 @@
         <h1></h1>
 
         <!--Add our own title and center in the title bar-->
-        <div class="controlPanelTitle"><%= options %></div>
+        <div id="optionsPanelTitle"><%= options %></div>
     </div>
 
     <br> <!-- vertical space -->
