12/3/12 add some more space below strength slider

--- a/simulations-html/simulations/faraday-html/templates/optionsPanel.html
+++ b/simulations-html/simulations/faraday-html/templates/optionsPanel.html
@@ -24,6 +24,8 @@
         <label for="strengthSlider" id="strengthSliderLabel"><%= magnetStrength %></label>
         <input id="strengthSlider" name="" type="range" value="0" min="0" max="300" data-highlight="true"/>
 
+        <br><br> <!-- vertical space -->
+
         <!-- Flip Polarity button -->
         <button id="flipPolarityButton" type="reset"><%= flipPolarity %></button>
 
