--- a/trunk/simulations-html/simulations/energy-skate-park/app/view/speed-control.html
+++ b/trunk/simulations-html/simulations/energy-skate-park/app/view/speed-control.html
@@ -1,4 +1,4 @@
-<fieldset data-role="controlgroup" class="<%= elementClass %>">
+<fieldset data-role="controlgroup">
     <input type="radio" name="radio-choice" id="radio-choice-1" value="choice-1" checked="checked"/>
     <label for="radio-choice-1"><%= slowMotion %></label>
 
