wiring up speedControl view to change animation speed

--- a/simulations-html/simulations/energy-skate-park/app/view/speed-control.html
+++ b/simulations-html/simulations/energy-skate-park/app/view/speed-control.html
@@ -1,7 +1,7 @@
 <fieldset data-role="controlgroup">
-    <input type="radio" name="radio-choice" id="radio-choice-1" value="choice-1" checked="checked"/>
+    <input type="radio" name="radio-choice" id="radio-choice-1" value="0.01"/>
     <label for="radio-choice-1"><%= slowMotion %></label>
 
-    <input type="radio" name="radio-choice" id="radio-choice-2" value="choice-2"/>
+    <input type="radio" name="radio-choice" id="radio-choice-2" value="0.02"  checked="checked"/>
     <label for="radio-choice-2"><%= normal %></label>
 </fieldset>
