--- a/trunk/simulations-html/simulations/energy-skate-park/resources/css/main.css
+++ b/trunk/simulations-html/simulations/energy-skate-park/resources/css/main.css
@@ -82,6 +82,7 @@ textarea {
 .play-area {
 
     /*Fill the entire width, but do not create scroll bars*/
+    /*TODO-PLEASE: make 100% but make sure no sliders*/
     width: 99%;
     height: 99%;
     position: absolute;
