--- a/trunk/simulations-html/simulations/energy-skate-park/resources/css/main.css
+++ b/trunk/simulations-html/simulations/energy-skate-park/resources/css/main.css
@@ -83,14 +83,15 @@ textarea {
 
     /*Fill the entire width, but do not create scroll bars*/
     /*TODO-PLEASE: make 100% but make sure no sliders*/
-    width: 99%;
-    height: 99%;
+    /*width: 99%;*/
+    /*height: 99%;*/
     position: absolute;
     top: 0;
     left: 0;
 
     /*Put the play area behind everything else*/
     z-index: -1;
+    display: block; /* To remove the scrollbars */
 }
 
 .header {
@@ -109,6 +110,16 @@ textarea {
 .play-area {
     border: 1px solid #000;
 }
+
+/** { margin:0; padding:0; } *//* to remove the top and left whitespace */
+
+/*html, body { width:100%; height:100%; } *//* just to be sure these are full screen*/
+
+canvas {
+    display: block;
+}
+
+/* To remove the scrollbars */
 
 /* ==========================================================================
 Helper classes
