--- a/trunk/simulations-html/simulations/energy-skate-park/resources/css/main.css
+++ b/trunk/simulations-html/simulations/energy-skate-park/resources/css/main.css
@@ -82,16 +82,28 @@ textarea {
 .play-area {
 
     /*Fill the entire width, but do not create scroll bars*/
-    /*TODO-PLEASE: make 100% but make sure no sliders*/
-    /*width: 99%;*/
-    /*height: 99%;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    margin: 0;
+    padding: 0;
     position: absolute;
     top: 0;
     left: 0;
 
     /*Put the play area behind everything else*/
-    z-index: -1;
     display: block; /* To remove the scrollbars */
+}
+
+.tab {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+
+    z-index: -1;
 }
 
 .header {
@@ -111,9 +123,13 @@ textarea {
     border: 1px solid #000;
 }
 
-/** { margin:0; padding:0; } *//* to remove the top and left whitespace */
+/** {*/
+/*margin: 0;*/
+/*padding: 0;*/
+/*overflow: hidden;*/
+/*}*/
 
-/*html, body { width:100%; height:100%; } *//* just to be sure these are full screen*/
+/*html, body { width:100%; height:100%; }  *//*just to be sure these are full screen*/
 
 canvas {
     display: block;
