--- a/simulations-html/simulations/energy-skate-park/resources/css/main.css
+++ b/simulations-html/simulations/energy-skate-park/resources/css/main.css
@@ -106,36 +106,26 @@ textarea {
     z-index: -1;
 }
 
-.header {
-    position: fixed;
-    top: 1em;
-    left: 1em;
-
-    border: 1px solid #000;
-
-    width: 80%;
-    min-height: 200px;
-
-    z-index: 100;
-}
-
 .play-area {
     border: 1px solid #000;
+    z-index: -1;
 }
 
-/** {*/
-/*margin: 0;*/
-/*padding: 0;*/
-/*overflow: hidden;*/
-/*}*/
-
-/*html, body { width:100%; height:100%; }  *//*just to be sure these are full screen*/
+.nav {
+    z-index: 2;
+    width: 80%;
+}
 
 canvas {
     display: block;
 }
 
-/* To remove the scrollbars */
+.control-panel {
+    position: absolute;
+    right: 0;
+    padding: 10px;
+    z-index: 10000;
+}
 
 /* ==========================================================================
 Helper classes
