--- a/simulations-html/simulations/energy-skate-park/css/main.css
+++ b/simulations-html/simulations/energy-skate-park/css/main.css
@@ -66,14 +66,15 @@ canvas {
 
 .control-panel {
     position: absolute;
-    right: 20px; /*Prevent scroll bars*/
+    right: 20px; /*Prevent scroll bars.  This line was probably necessary after changing the default font in the buttons*/
     padding: 10px;
     z-index: 10000;
 }
 
+/*Copied this css from the bootstrap css for an active button, used to show a button as pressed (for radio/checkbox behavior)*/
 .js-active-button {
     background-color: #e6e6e6;
-    background-color: #d9d9d9   \9;
+    background-color: #d9d9d9     \9;
     background-image: none;
     outline: 0;
     -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
