--- a/trunk/simulations-html/common/phetcommon/css/phetcommon.css
+++ b/trunk/simulations-html/common/phetcommon/css/phetcommon.css
@@ -1,22 +1,20 @@
-.prototype-overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(100, 100, 100, 0.5);
-    font-family: Arial;
-}
+/* Copyright 2002-2012, University of Colorado */
 
-.popup {
-    /*display: none;*/
+/* Styling of the Prototype dialog, prototype-dialog.html -----------------------------------*/
+
+/* Overlay that covers the entire document area. */
+#prototype-dialog-overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.33);
+    background-color: rgba(0, 0, 0, 0.33); /* makes everything behind the dialog look dimmed */
 }
 
-.popup .popup-content {
+/* the content is everything inside the dialog */
+#prototype-dialog-content {
+    font-family: Arial;
     background: white;
     border: 2px solid #445;
     border-radius: 1em;
@@ -24,11 +22,17 @@
     max-height: 75%;
     overflow: auto;
     box-shadow: 0 1em 2em rgba(0, 0, 0, 0.5);
-    padding-bottom: 1.2em;
     -webkit-overflow-scrolling: touch;
 }
 
-.popup h3 {
+/* the body is everything except the title */
+#prototype-dialog-body {
+    margin: 1ex 1.6em;
+    padding-bottom: 1ex;
+}
+
+/* title */
+#prototype-dialog-title {
     margin: 0 0 0.5em 0;
     padding: 0.4em 0.6em;
     text-align: center;
@@ -36,29 +40,20 @@
     border-bottom: 1px solid #444;
 }
 
-.popup .credits {
-    margin: 1ex 1.6em;
-    padding-bottom: 1ex;
-}
-
-.popup .credits .logo {
+/* PhET logo */
+#prototype-dialog-logo {
     float: left;
     margin-right: 1em;
 }
 
-.popup .credits .text {
+/* text message */
+#prototype-dialog-text {
     overflow: hidden; /* prevents float at left from creating ragged edge */
 }
 
-.popup .version {
-    margin: 1em 1.6em;
-}
-
-.popup .credits button {
+/* OK button */
+#prototype-dialog-ok-button {
     display: table;
     margin: 0 auto;
     margin-top: 10px;
-}
-
-.popup .version p {
 }
