--- a/trunk/simulations-html/common/phetcommon/css/phetcommon.css
+++ b/trunk/simulations-html/common/phetcommon/css/phetcommon.css
@@ -10,6 +10,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.33); /* makes everything behind the dialog look dimmed */
+    z-index: 99; /* Make sure the dialog is in front of everything */
 }
 
 /* the content is everything inside the dialog */
