periodic table should be centered

--- a/simulations-html/simulations/build-an-atom/css/main-bootstrap.css
+++ b/simulations-html/simulations/build-an-atom/css/main-bootstrap.css
@@ -65,6 +65,11 @@ body {
     width: 80%;
 }
 
+#periodic-table table tr {
+  text-align: center;
+  vertical-align: middle;
+}
+
 #periodic-table table td {
     border: 1px solid black;
     text-align: center;
