--- a/simulations-html/simulations/build-an-atom/js/templates/net-charge.html
+++ b/simulations-html/simulations/build-an-atom/js/templates/net-charge.html
@@ -1,6 +1,7 @@
-<span class="net-charge"><%= charge %></span>
-<style>
-    .net-charge {
-        color: <%= fontColor %>
-    }
-</style>
+<div class="dial">
+  <div class="needle">
+    <i class="icon-arrow-up"></i>
+  </div>
+</div>
+
+<span class="net-charge" style="color: <%= fontColor %>"><%= charge %></span>
