--- a/simulations-html/simulations/build-an-atom/js/templates/net-charge.html
+++ b/simulations-html/simulations/build-an-atom/js/templates/net-charge.html
@@ -1,7 +1,23 @@
-<div class="dial">
-  <div class="needle">
-    <i class="icon-arrow-up"></i>
+<div id="net-charge-meter">
+  <div class="dial">
+    <div class="needle">
+      <i class="icon-arrow-up"></i>
+    </div>
   </div>
+
+  <span class="net-charge"><%= charge %></span>
 </div>
 
-<span class="net-charge" style="color: <%= fontColor %>"><%= charge %></span>
+<ul id="charge-pairing-graph">
+
+  <% for(var i=0; i < pairs; i++ ){ %>
+   <li>
+      <i class="icon-plus"></i>
+      <i class="icon-minus"></i>
+    </li>
+  <% } %>
+
+  <li class="no-border">
+    <i class="icon-plus"></i>
+  </li>
+</ul>
